# remote_sensing_process

./: .gitignore  Readme.md  setup.cfg
src/preprocessing/: crop.py  main.py  norm.py  util.py
src/process/: main.py  main2.py  norm.py  sen2sample_oo.py  util.py
src/process/application/: __init__.py  cli_dataset.py  cli_lucc.py  cli_window.py  lucc_task.py  norm.py  shapefile_task.py  split_val_from_train.py  supervise_task.py  supervise_task1.py  supervise_task2.py  un_supervise_task.py  unsupervise_task.py  util.py
src/process/application/download/: aws_downloader.py  downloader.py
src/process/cropper/: __init__.py  base_cropper.py  cropper.py  file_cropper.py  object_orient_cropper.py  slide_window_cropper.py  util.py
src/process/downloader/: __init__.py  aws_downloader.py  base_downloader.py  util.py
src/process/gt_reader/: __init__.py  shp_reader.py  util.py
src/process/reader/: __init__.py  aws_sentinel_stack_reader.py  aws_sentinel_unstack_reader.py  shp_reader.py  test_gdal.py  tif_reader.py  util.py
src/process/sat_reader/: __init__.py  base_reader.py  lucc_reader.py  stack_reader.py  unstack_reader.py  util.py
