[metadata]
name = remote_sensing_process
version = 1.1
author = watercore
email = watercore2001@gmail.com

[options]
python_requires = ==3.10.*
install_requires =
    tqdm ~= 4.66
    matplotlib ~= 3.8
    pystac_client ~= 0.7.5
    einops ~= 0.7
    geojson
zip_safe = False

package_dir = =src
packages = find_namespace:

[options.entry_points]
console_scripts =
    supervise_dataset = process.application.supervise_main

[options.packages.find]
where = src
